# Yucchin-s-Muscle-Training

./: README.md  SETUP.md  docker-compose.yml  package-lock.json  tatus
backend/: Backend_Manual.md  DBGuide.md  README.md  check_data.py  create_test_data.py  main.py  nixpacks.toml  pyproject.toml
backend/app/: database.py
backend/app/core/: security.py
backend/app/crud/: __init__.py  settings.py  training.py  user.py  yucchin.py
backend/app/models/: __init__.py  settings.py  training.py  user.py  yucchin.py
backend/app/routers/: auth.py  pose.py  settings.py  training.py  users.py  yucchin.py
backend/app/schemas/: __init__.py  settings.py  training.py  user.py  yucchin.py
frontend/: Frontend_API_Guide.md  Frontend_Manual.md  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  training.ts
frontend/src/components/: ProtectedRoute.tsx
frontend/src/components/camera/: PoseDetector.tsx  PoseOverlay.tsx
frontend/src/components/training/: PortraitOverlay.tsx  TrainingContainer.tsx  TrainingGuide.tsx  TrainingResult.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/data/: yucchinMaster.ts
frontend/src/hooks/: useOrientation.ts  useTrainer.ts
frontend/src/pages/auth/: AuthPage.tsx
frontend/src/pages/camera/: CameraPage.tsx
frontend/src/pages/collection/: CollectionPage.tsx
frontend/src/pages/dashboard/: HomePage.tsx
frontend/src/pages/gannbarinorekisi/: GanbarinorekisiPage.tsx
frontend/src/pages/get/: GetPage.tsx
frontend/src/utils/: audio.ts
(+7 files in other folders)
